# agent-patterns-lab

./: .gitignore  AGENTS.md  AGENT_DESIGN_PATTERNS_REPORT.md  ITERATION_PLAN.md  README.md  mkdocs.yml  pyproject.toml
data/: mini_corpus.jsonl
examples/: 00_single_shot.py  01_conversation_history.py  10_structured_output.py  11_prompt_chaining.py  12_routing.py  20_tool_calling.py  21_react_loop.py  30_maker_checker.py  31_voting.py  32_cove.py  40_retrieval_loop.py  41_agentic_rag.py  42_reflexion.py  50_plan_and_solve.py  51_planner_executor_replanner.py  52_rewoo.py  53_llm_compiler.py  54_lats.py  55_self_discovery.py  56_storm.py  60_manager_worker.py  61_agents_as_tools.py  62_group_chat_round_robin.py  63_group_chat_selector.py  64_handoff.py  65_magentic_orchestration.py  66_governance_hitl_policy_guardrails.py  70_openai_sdk_optional.py  71_anthropic_sdk_optional.py
tests/: test_agentic_rag.py  test_agents_as_tools.py  test_anthropic_adapter.py  test_cache.py  test_cove.py  test_editorial_pipeline.py  test_evals_runner.py  test_group_chat.py  test_guardrails.py  test_handoff_pattern.py  test_hitl.py  test_lats.py  test_llm_compiler.py  test_magentic_orchestration.py  test_maker_checker.py  test_manager_worker.py  test_memory.py  test_mock_model.py  test_openai_adapter.py  test_per.py  test_plan_and_solve.py  test_policy.py  test_react.py  test_reflexion.py  test_reliability.py  test_retrieval.py  test_retrieval_loop.py  test_rewoo.py  test_routing.py  test_runner.py  test_self_discovery.py  test_storm.py  test_structured.py  test_tools.py  test_voting.py  (+1 more)
(+154 files in other folders)
